[metadata]
name = datacompy
version = attr: datacompy.__version__
description = Dataframe comparison in Python
long_description = file: README.md, MAINTAINERS
long_description_content_type = text/markdown
author = Ian Robertson, Dan Coates, Faisal Dosani
author_email = faisal.dosani@capitalone.com
license = Apache Software License
maintainer = Faisal Dosani
maintainer_email = faisal.dosani@capitalone.com
url = https://github.com/capitalone/datacompy
python_requires = 
	>=3.7.0
project_urls = 
	Documentation = https://capitalone.github.io/datacompy/
	Bug Tracker = https://github.com/capitalone/datacompy/issues
	Source Code = https://github.com/capitalone/datacompy
classifiers = 
	Intended Audience :: Developers
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	pandas<=1.5.1,>=0.25.0
	numpy<=1.23.4,>=1.11.3
	ordered-set<=4.1.0,>=4.0.2

[options.package_data]
* = templates/*

[options.extras_require]
spark = 
	pyspark>=2.2.0
docs = 
	sphinx
	sphinx_rtd_theme
tests = 
	pytest
	pytest-cov
	pytest-spark
qa = 
	pre-commit
	black
	isort
build = 
	build
	twine
	wheel
edgetest = 
	edgetest
	edgetest-conda
dev = 
	sphinx
	sphinx_rtd_theme
	pytest
	pytest-cov
	pytest-spark
	pre-commit
	black
	isort
	build
	twine
	wheel

[bdist_wheel]
python-tag = py3

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[edgetest.envs.core]
python_version = 3.9
conda_install = 
	openjdk=8
extras = 
	tests
	spark
command = 
	pytest tests -m 'not integration'
upgrade = 
	pandas
	numpy
	ordered-set

